<resources xmlns:tool="http://schemas.android.com/tools">
    <string name="app_name">Bunnypedia</string>
    <string name="card_thumbnail">Card thumbnail</string>
    <string name="card_type_run">Run</string>
    <string name="card_type_roaming_red_run">Roaming Red Run</string>
    <string name="card_type_special">Special</string>
    <string name="card_type_very_special">Very Special</string>
    <string name="card_type_play_immediately">Play Immediately</string>
    <string name="card_type_zodiac">Zodiac</string>
    <string name="card_type_chinese_zodiac">Chinese Zodiac</string>
    <string name="card_type_mysterious_place">Mysterious Place</string>
    <string name="card_type_starter">Starter</string>
    <string name="card_type_carrot_supply">Carrot Supply</string>
    <string name="card_type_bunderground_station">Bunderground Station</string>
    <string name="all_cards">All Cards</string>
    <string name="section_description">Description</string>
    <string name="section_additional_rules">Additional Rules</string>
    <string name="section_dice">Dice</string>
    <string name="section_type">Card Type</string>
    <string name="section_weapon_level">Weapon Level</string>
    <string name="section_requires_bunny">Requires Bunny</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deck_red_booster">Red Booster</string>
    <string name="deck_orange_booster">Orange Booster</string>
    <string name="deck_yellow_booster">Yellow Booster</string>
    <string name="deck_green_booster">Green Booster</string>
    <string name="deck_blue_starter">Blue Starter</string>
    <string name="deck_violet_booster">Violet Booster</string>
    <string name="deck_perfectly_pink_booster">Perfectly Pink Booster</string>
    <string name="deck_twilight_white_booster">Twilight White Booster</string>
    <string name="deck_stainless_steel_booster">Stainless Steel Booster</string>
    <string name="deck_ominous_onyx_booster">Ominous Onyx Booster</string>
    <string name="deck_wacky_khaki_booster">Wacky Khaki Booster</string>
    <string name="deck_chocolate_booster">Chocolate Booster</string>
    <string name="deck_conquest_blue_starter">Conquest Blue Starter</string>
    <string name="deck_conquest_yellow_booster">Conquest Yellow Booster</string>
    <string name="deck_conquest_red_booster">Conquest Red Booster</string>
    <string name="deck_conquest_violet_booster">Conquest Violet Booster</string>
    <string name="deck_fantastic_booster">Fantastic Booster</string>
    <string name="deck_caramel_swirl_booster">Caramel Swirl Booster</string>
    <string name="deck_creature_feature_booster">Creature Feature Booster</string>
    <string name="deck_pumpkin_spice_booster">Pumpkin Spice Booster</string>
    <string name="deck_kinder_sky_blue_starter">KinderBunnies Sky Blue Starter</string>
    <string name="deck_kinder_sunshine_yellow_booster">KinderBunnies Sunshine Yellow Booster</string>
    <string name="deck_la_di_da_london_booster">La-Di-Da London Booster</string>
    <string name="deck_cake_batter">Cake Batter Booster</string>
    <string name="deck_radioactive_robots">Radioactive Robots</string>
    <string name="deck_almond_crisp">Almond Crisp</string>
    <string name="deck_kinder_ruby_red">KinderBunnies Ruby Red Starter</string>
    <string name="deck_kinder_pesky_purple">KinderBunnies Pesky Purple Booster</string>
    <string name="card_type_kaballa_dolla">Kaballa Dolla</string>
    <string name="card_type_rank">Rank</string>
    <string name="section_ftb_requirements">Food Units Required</string>
    <string name="ftb_cabbage_water" tool:ignore="PluralsCandidate">%1$d Cabbage &amp; %2$d Water</string>
    <string name="ftb_radish_milk" tool:ignore="PluralsCandidate">%1$d Radish &amp; %2$d Milk</string>
    <string name="ftb_cabbage_radish" tool:ignore="PluralsCandidate">%1$d Cabbage or %1$d Radish</string>
    <string name="ftb_water_milk" tool:ignore="PluralsCandidate">%1$d Water or %1$d Milk</string>
    <string name="ftb_cabbage" tool:ignore="PluralsCandidate">%1$d Cabbage</string>
    <string name="ftb_water" tool:ignore="PluralsCandidate">%1$d Water</string>
    <string name="ftb_random">Roll for amounts</string>
    <string name="ftb_dated_water">Dated Water</string>
    <string name="ftb_dated_cabbage">Dated Cabbage</string>
    <string name="zodiac_type_fire">Fire</string>
    <string name="zodiac_type_earth">Earth</string>
    <string name="zodiac_type_air">Air</string>
    <string name="zodiac_type_water">Water</string>
    <string name="zodiac_pisces">Pisces</string>
    <string name="zodiac_scorpio">Scorpio</string>
    <string name="zodiac_cancer">Cancer</string>
    <string name="zodiac_aquarius">Aquarius</string>
    <string name="zodiac_libra">Libra</string>
    <string name="zodiac_gemini">Gemini</string>
    <string name="zodiac_capricorn">Capricorn</string>
    <string name="zodiac_virgo">Virgo</string>
    <string name="zodiac_taurus">Taurus</string>
    <string name="zodiac_sagittarius">Sagittarius</string>
    <string name="zodiac_leo">Leo</string>
    <string name="zodiac_aries">Aries</string>
    <string name="section_zodiac_number">Zodiac Number</string>
    <string name="section_zodiac_sign">Zodiac Sign</string>
    <string name="section_zodiac_element">Zodiac Element</string>
    <string name="section_zodiac_date">Zodiac Date</string>
    <string name="section_zodiac_years">Zodiac Years</string>
    <string name="zodiac_number_n">%1$d</string>
    <string name="zodiac_info">%1$s (%2$s)</string>
    <string name="zodiac_date_range">%1$s - %2$s</string>
    <string name="zodiac_date_range_current">%1$s - %2$s (Current)</string>
    <string name="zodiac_year_current">Current! Previous: %1$d, Next: %2$d</string>
    <string name="zodiac_year">Previous: %1$d, Next: %2$d</string>
    <string name="rank_e1">Seaman Recruit</string>
    <string name="rank_e2">Seaman Apprentice</string>
    <string name="rank_e3">Seaman</string>
    <string name="rank_e4">Petty Officer 3rd Class</string>
    <string name="rank_e5">Petty Officer 2nd Class</string>
    <string name="rank_e6">Petty Officer 1st Class</string>
    <string name="rank_e7">Chief Petty Officer</string>
    <string name="rank_e8">Senior Chief Petty Officer</string>
    <string name="rank_e9">Master Chief Petty Officer</string>
    <string name="rank_01">Ensign</string>
    <string name="rank_02">Lieutenant JG</string>
    <string name="rank_03">Lieutenant</string>
    <string name="rank_04">Lieutenant Commander</string>
    <string name="rank_05">Commander</string>
    <string name="rank_06">Captain</string>
    <string name="rank_07">Upper Rear Admiral</string>
    <string name="rank_08">Upper Rear Admiral</string>
    <string name="rank_09">Vice Admiral</string>
    <string name="section_rank">Rank</string>
    <string name="rank_pay_grade">%1$s (%2$s)</string>
    <string name="bunny_required_to_play">Yes</string>
    <string name="bunny_required_to_play_x2">Yes (requires 2 bunnies)</string>
    <string name="bunny_required_to_play_and_save">Yes (to play and keep saved)</string>
    <string name="section_pawn">Pawn</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="pink">Pink</string>
    <string name="black">Black</string>
    <string name="brown">Brown</string>
    <string name="psi_type_arrow">Arrow</string>
    <string name="psi_type_kite">Kite</string>
    <string name="section_special_series">Special Series</string>
    <string name="section_bunderground_info">Station Info</string>
    <string name="series_omega">Omega</string>
    <string name="series_psi">Psi</string>
    <string name="series_nu">Nu</string>
    <string name="series_theta">Theta</string>
    <string name="series_phi">Phi</string>
    <string name="series_pi">Pi</string>
    <string name="section_psi">Psi</string>
    <string name="psi_symbol_title">%1$s %2$s</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Card ID# or Name</string>
    <string name="pref_available_booster_decks">Available Booster Decks</string>
    <string name="pref_summary_booster_decks">Choose which booster decks you have (if any)</string>
    <string name="pref_title_booster_decks">Booster Decks</string>
    <string name="settings">Settings</string>
    <string name="loading_cards">Loading Cards…</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="pref_view_settings">View Settings</string>
    <string name="pref_title_view_type">Cards View</string>
    <string name="pref_view_reset_data">Reset Data</string>
    <string name="pref_title_reset_database">Card Database</string>
    <string name="pref_summary_reset_database">If you experience issues with the database, like no cards showing up, use this option.</string>
    <string name="reset">Reset</string>
    <string name="pref_summary_view_type">How would you like to view the list of cards.</string>
    <string name="card_type_senator">Senator</string>
    <string name="card_type_metal">Metal</string>
    <string name="bunderground_station_format">%1$s Line - #%2$d</string>
    <string name="about">About</string>
    <string name="about_title">Bunnypedia v%1$s 🐰🥕</string>
    <string name="about_content"><![CDATA[Bunnypedia is created by <a href="https://github.com/joshfriend/bunnypedia">Josh Friend</a>.<br><br>Special thanks to <a href="magiccarrot.com">Glenn Davis (TheDavii)</a> and <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1116936658">Matthew Lein (Mahobear8)</a> for their support in creating this app 💖.<br><br>Come join other fans of Killer Bunnies <a href="https://discord.gg/WSjq2Fu">on Discord!</a><br><br>Killer Bunnies is a registered trademark of Jeffrey Bellinger. All rights reserved. All copyrights and trademarks used under license.]]></string>
</resources>
