<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/search"
        app:iconTint="@color/white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/viewList"
        android:title="@string/list_view"
        android:icon="@drawable/view_list"
        android:visible="false"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white" />

    <item
        android:id="@+id/viewGrid"
        android:title="@string/grid_view"
        android:icon="@drawable/view_grid"
        android:visible="false"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white" />

</menu>
