<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        >

        <ImageView
            android:id="@+id/cardThumbnail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/card_0048"
            android:contentDescription="@string/card_thumbnail"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_type"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/cardType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_type_run"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/diceContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="4dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_dice"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/diceFlexLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:flexDirection="row"
                app:alignItems="flex_start"
                app:alignContent="flex_start">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dice12"
                    android:tint="@color/deck_onyx"
                    android:visibility="gone"
                    android:layout_marginBottom="4dp"
                    tools:visibility="visible"
                    tools:ignore="ContentDescription"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dice12"
                    android:tint="@color/deck_blue"
                    android:visibility="gone"
                    tools:visibility="visible"
                    tools:ignore="ContentDescription"
                    />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerPawnInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_pawn"
                style="@style/TextAppearance.AppCompat.Caption"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:id="@+id/pawnSymbol"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/pawn"
                    android:padding="2dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/section_pawn"
                    />

                <TextView
                    android:id="@+id/pawnName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Black"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weaponLevelContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_weapon_level"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/weaponLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="12"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerFtb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_ftb_requirements"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/ftbRequirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="2 Cabbage, 1 Water"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerRequiresBunny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_requires_bunny"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/requiresBunny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Yes"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerZodiacSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_zodiac_sign"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/zodiacSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Aries (Fire)"
                android:drawableStart="@drawable/zodiac_type_aries"
                android:drawablePadding="8dp"
                tools:drawableTint="@color/zodiac_element_fire"
                android:gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerZodiacDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_zodiac_date"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <TextView
                android:id="@+id/zodiacDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="March 21 - April 20"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerRank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_rank"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables"
                >

                <ImageView
                    android:id="@+id/rankSymbol"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    tools:src="@drawable/rank_e3"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/section_rank"
                    />

                <TextView
                    android:id="@+id/rankTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Seaman (E-3)"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerPsiInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_psi"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <!-- TODO: Icon -->
            <TextView
                android:id="@+id/psiTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Blue Kite"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerSpecialSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            tools:visibility="visible"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_special_series"
                style="@style/TextAppearance.AppCompat.Caption"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables"
                >

                <TextView
                    android:id="@+id/seriesSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    tools:text="θ"
                    style="@style/TextAppearance.AppCompat.Headline"
                    />

                <TextView
                    android:id="@+id/seriesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Theta"
                    style="@style/TextAppearance.AppCompat.Body1"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
